# UAIbotPy

./: noxfile.py  pyproject.toml  setup.py
.github/workflows/: noxtests.yaml  release.yml
tests/test_simobjects/: test_ball.py
uaibot/c_implementation/: CMakeLists.txt  pybind_main.cpp
